BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/QuoteLineEditor__mdt.object-meta.xml
<CustomObject>
    <description>Config to store the setting for QuoteLineEditor</description>
    <label>QuoteLineEditor</label>
    <pluralLabel>QuoteLineEditor</pluralLabel>
</CustomObject>