BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/ColumName__c.field-meta.xml
<CustomField>
    <fullName>ColumName__c</fullName>
    <description>Column Name to be displayed</description>
    <label>ColumName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>