BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/DefaultChecked__c.field-meta.xml
<CustomField>
    <fullName>DefaultChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DefaultChecked</label>
    <type>Checkbox</type>
</CustomField>