BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <defaultValue>&quot;Unselected&quot;</defaultValue>
    <label>Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Unselected</fullName>
            </value>
            <value>
                <fullName>Readonly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>