BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/Editable_After_Status__c.field-meta.xml
<CustomField>
    <fullName>Editable_After_Status__c</fullName>
    <description>for making editable by administrator for quote line item.</description>
    <inlineHelpText>for making editable by administrator for quote line item.</inlineHelpText>
    <label>Editable In Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>