BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/helpText__c.field-meta.xml
<CustomField>
    <fullName>helpText__c</fullName>
    <label>helpText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>