BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <label>SortOrder</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>