BradkenProduction/force-app/main/default/objects/QuoteLineEditor__mdt/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>MasterLabel</columns>
    <columns>SortOrder__c</columns>
    <columns>ColumName__c</columns>
    <columns>DataType__c</columns>
    <columns>DefaultChecked__c</columns>
    <columns>Display__c</columns>
    <columns>FieldAPI__c</columns>
    <columns>Editable_After_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All1</label>
    <language>en_US</language>
</ListView>